@@ -23,13 +23,13 @@ JHtml::_('behavior.tooltip');
 
 		$link	= 'index.php?option=com_modules&task=module.add&eid='. $item->extension_id;
 		$name	= $this->escape(JText::_($item->name));
-		$desc	= $this->escape(JText::_('Modules_No_description_available'));
+		$desc	= $this->escape(JText::_('COM_MODULES_NODESCRIPTION'));
 
 		if (isset($item->xml))
 		{
 			if ($text = (string) $item->xml->description)
 			{
-				$desc = $this->escape($text);
+				$desc = $this->escape(JText::_($text));
 			}
 		}
 		?>
