@@ -23,6 +23,7 @@ COM_MODULES_MODULES_FILTER_SEARCH_DESC="Search in module title."
 COM_MODULES_OPTION_SELECT_CLIENT="- Select Type -"
 COM_MODULES_OPTION_SELECT_MODULE="- Select Module -"
 COM_MODULES_OPTION_SELECT_POSITION="- Select Position -"
+COM_MODULES_NODESCRIPTION="No description available"
 
 COM_MODULES_OPTION_ADMINISTRATOR="Administrator"
 COM_MODULES_OPTION_SITE="Site"
