@@ -16,6 +16,11 @@ JSAVE="Save"
 JCANCEL="Cancel"
 JCOMMON_GT="&gt;"
 JCOMMON_LT="&lt;"
+JHIDE="Hide"
+JSHOW="Show"
+LT="&lt;"
+GT="&gt;"
+JERROR_LOADING_FEED_DATA="Error loading feed data"
 
 DATE_FORMAT_LC="%A, %d %B %Y"
 DATE_FORMAT_LC1="%A, %d %B %Y"
@@ -145,10 +150,6 @@ PHPMAILER_ENCODING="Unknown encoding:"
 PHPMAILER_SIGNING_ERROR="Signing error:"
 
 
-JHIDE="Hide"
-JSHOW="Show"
-LT="&lt;"
-GT="&gt;"
 A_USER_SUBMITTED="A User submitted"
 ACCESS_DENIED="Access Denied!"
 ACCESS_FORBIDDEN="Access Forbidden!"
