@@ -4,26 +4,23 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-DISPLAY FEED IN RTL DIRECTION="Display Feed in RTL direction"
-DISPLAY NEWS FEED TITLE="Display news feed title"
-ENTER NUMBER OF RSS ITEMS TO DISPLAY="Enter number of RSS Items to display"
-ENTER THE URL OF THE RSS/RDF FEED="Enter the URL of the RSS/RDF Feed"
-FEED DESCRIPTION="Feed Description"
-FEED IMAGE="Feed Image"
-FEED DISPLAY="Feed Display"
-FEED TITLE="Feed Title"
-ITEM DESCRIPTION="Item Description"
-ITEMS="Items"
-MOD_FEED="Articles - Feed"
-NO FEED URL SPECIFIED.="No Feed URL specified."
-PARAMITEMDESC="Show the Description or Intro text of individual RSS Items"
-PARAMWORDCOUNT="Allows you to limit the amount of visible Item description text. 0 will show all the text"
-PLEASE MAKE CACHE DIRECTORY WRITABLE="Please make the Cache directory writable."
-RSS="RSS"
-RTL FEED="RTL Feed"
-FEED URL="Feed URL"
-SHOW THE DESCRIPTION TEXT FOR THE WHOLE FEED="Show the description text for the whole feed."
-SHOW THE IMAGE ASSOCIATED WITH THE WHOLE FEED="Show the image associated with the whole feed."
-DESCFEED="This Module allows the displaying of a syndicated feed."
-WORD COUNT="Word Count"
-THE TIME IN SECONDS BEFORE THE MODULE IS RE-CACHED.="The time in seconds before the module is re-cached."
+MOD_FEED_ERR_CACHE="Please make cache directory writable"
+MOD_FEED_ERR_NO_URL="No feed URL specified."
+MOD_FEED_FIELD_DESCRIPTION_DESC="Show the description text for the whole Feed"
+MOD_FEED_FIELD_DESCRIPTION_LABEL="Feed Description"
+MOD_FEED_FIELD_IMAGE_DESC="Show the image associated with the whole Feed"
+MOD_FEED_FIELD_IMAGE_LABEL="Feed image"
+MOD_FEED_FIELD_ITEMDESCRIPTION_DESC="Show the Description or Intro text of individual RSS Items"
+MOD_FEED_FIELD_ITEMDESCRIPTION_LABEL="Item Description"
+MOD_FEED_FIELD_ITEMS_DESC="Enter number of RSS items to display"
+MOD_FEED_FIELD_ITEMS_LABEL="Items"
+MOD_FEED_FIELD_RSSTITLE_DESC="Display news feed title"
+MOD_FEED_FIELD_RSSTITLE_LABEL="Feed Title"
+MOD_FEED_FIELD_RSSURL_DESC="Enter the URL of the RSS/RDF feed"
+MOD_FEED_FIELD_RSSURL_LABEL="Feed URL"
+MOD_FEED_FIELD_RTL_LABEL="RTL feed"
+MOD_FEED_FIELD_RTL_DESC="Display feed in RTL direction"
+MOD_FEED_FIELD_WORDCOUNT_DESC="Allows you to limit the amount of visible Item description text. 0 will show all the text"
+MOD_FEED_FIELD_WORDCOUNT_LABEL="Word Count"
+MOD_FEED_XML_DESCRIPTION="This module allows the displaying of a syndicated feed"
+FEED DISPLAY="Feed display"
